--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ p {
 }
 
 
-@media all and (max-width:600px) {
+/*@media all and (max-width:600px) {
 
     .main-title {
         font-size: 1.5em;
@@ -176,7 +176,7 @@ p {
         font-size: 1.5em;
     }
 
-}
+}*/
 
 /*sets*/
 
